parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    AS
    BOOLEAN
    BREAK
    BY
    BYTE
    CATCH
    CHAR
    CLASS
    COLON
    COMMENTLINEA
    COMMENTMULTI
    COMPANION
    CONST
    CONTINUE
    CROSSINLINE
    DATA
    DELEGATE
    DIVASIGN
    DO
    DOLAR
    DOUBLE
    DOUBLE_QUOTA
    ELSE
    ENUM
    FIELD
    FINAL
    FINALLY
    FOR
    FUN
    IF
    IMPORT
    IN
    INFIX
    INIT
    INLINE
    INT
    INTERFACE
    INTERNAL
    INTERPOLACION
    IS
    LATEINIT
    LCOR
    LISTOF
    LLLAVE
    LONG
    MAPOF
    MODASIGN
    MULTASIGN
    MUTABLELISTOF
    MUTABLEMAPOF
    MUTABLESETOF
    NOINLINE
    NULL
    NULLABLE_TYPE
    OBJECT
    OPEN
    OPERATOR
    OUT
    OVERRIDE
    PACKAGE
    PRINTLN
    PRIVATE
    PROTECTED
    PUBLIC
    PUYCO
    RANGE_TO
    RCOR
    REIFIED
    RESTASIGN
    RLLAVE
    SEALED
    SETOF
    SHORT
    STRING
    SUMASIGN
    SUPER
    SUSPEND
    TAILREC
    THIS
    THROW
    TRAILREC
    TRY
    TYPEALIAS
    TYPEOF
    VAL
    VAR
    WHEN
    WHERE
    WHILE
    YIELD
    return

Grammar

Rule 0     S' -> programa
Rule 1     programa -> sentencias
Rule 2     sentencias -> sentencia
Rule 3     sentencias -> sentencias sentencia
Rule 4     sentencia -> asignacion
Rule 5     sentencia -> impresion
Rule 6     sentencia -> impresion_vacia
Rule 7     sentencia -> expresion
Rule 8     sentencia -> condicion
Rule 9     asignacion -> VARIABLE ASIGN VARIABLE
Rule 10    asignacion -> VARIABLE ASIGN expresion
Rule 11    asignacion -> VARIABLE ASIGN condicion
Rule 12    impresion_vacia -> PRINT RPAREN LPAREN
Rule 13    impresion -> PRINT RPAREN repiteValores LPAREN
Rule 14    valor -> NUMBER
Rule 15    valor -> FLOAT
Rule 16    valor -> VARIABLE
Rule 17    valor -> TRUE
Rule 18    valor -> FALSE
Rule 19    repiteValores -> valor COMMA repiteValores
Rule 20    repiteValores -> valor
Rule 21    expresion -> expresion PLUS expresion
Rule 22    expresion -> expresion MINUS expresion
Rule 23    expresion -> expresion TIMES expresion
Rule 24    expresion -> expresion DIVIDE expresion
Rule 25    expresion -> expresion MOD expresion
Rule 26    expresion -> LPAREN expresion RPAREN
Rule 27    expresion -> NUMBER
Rule 28    expresion -> FLOAT
Rule 29    expresion -> TRUE
Rule 30    expresion -> FALSE
Rule 31    expresion -> condicion
Rule 32    expresion -> VARIABLE
Rule 33    condicion -> expresion GREATER expresion
Rule 34    condicion -> expresion LESS expresion
Rule 35    condicion -> expresion GREATER_EQUALS expresion
Rule 36    condicion -> expresion LESS_EQUALS expresion
Rule 37    condicion -> expresion EQUALS expresion
Rule 38    condicion -> expresion NOT_EQUALS expresion
Rule 39    condicion -> condicion AND condicion
Rule 40    condicion -> condicion OR condicion
Rule 41    condicion -> NOT condicion
Rule 42    condicion -> NOT expresion
Rule 43    condicion -> LPAREN condicion RPAREN

Terminals, with rules where they appear

ABSTRACT             : 
AND                  : 39
AS                   : 
ASIGN                : 9 10 11
BOOLEAN              : 
BREAK                : 
BY                   : 
BYTE                 : 
CATCH                : 
CHAR                 : 
CLASS                : 
COLON                : 
COMMA                : 19
COMMENTLINEA         : 
COMMENTMULTI         : 
COMPANION            : 
CONST                : 
CONTINUE             : 
CROSSINLINE          : 
DATA                 : 
DELEGATE             : 
DIVASIGN             : 
DIVIDE               : 24
DO                   : 
DOLAR                : 
DOUBLE               : 
DOUBLE_QUOTA         : 
ELSE                 : 
ENUM                 : 
EQUALS               : 37
FALSE                : 18 30
FIELD                : 
FINAL                : 
FINALLY              : 
FLOAT                : 15 28
FOR                  : 
FUN                  : 
GREATER              : 33
GREATER_EQUALS       : 35
IF                   : 
IMPORT               : 
IN                   : 
INFIX                : 
INIT                 : 
INLINE               : 
INT                  : 
INTERFACE            : 
INTERNAL             : 
INTERPOLACION        : 
IS                   : 
LATEINIT             : 
LCOR                 : 
LESS                 : 34
LESS_EQUALS          : 36
LISTOF               : 
LLLAVE               : 
LONG                 : 
LPAREN               : 12 13 26 43
MAPOF                : 
MINUS                : 22
MOD                  : 25
MODASIGN             : 
MULTASIGN            : 
MUTABLELISTOF        : 
MUTABLEMAPOF         : 
MUTABLESETOF         : 
NOINLINE             : 
NOT                  : 41 42
NOT_EQUALS           : 38
NULL                 : 
NULLABLE_TYPE        : 
NUMBER               : 14 27
OBJECT               : 
OPEN                 : 
OPERATOR             : 
OR                   : 40
OUT                  : 
OVERRIDE             : 
PACKAGE              : 
PLUS                 : 21
PRINT                : 12 13
PRINTLN              : 
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
PUYCO                : 
RANGE_TO             : 
RCOR                 : 
REIFIED              : 
RESTASIGN            : 
RLLAVE               : 
RPAREN               : 12 13 26 43
SEALED               : 
SETOF                : 
SHORT                : 
STRING               : 
SUMASIGN             : 
SUPER                : 
SUSPEND              : 
TAILREC              : 
THIS                 : 
THROW                : 
TIMES                : 23
TRAILREC             : 
TRUE                 : 17 29
TRY                  : 
TYPEALIAS            : 
TYPEOF               : 
VAL                  : 
VAR                  : 
VARIABLE             : 9 9 10 11 16 32
WHEN                 : 
WHERE                : 
WHILE                : 
YIELD                : 
error                : 
return               : 

Nonterminals, with rules where they appear

asignacion           : 4
condicion            : 8 11 31 39 39 40 40 41 43
expresion            : 7 10 21 21 22 22 23 23 24 24 25 25 26 33 33 34 34 35 35 36 36 37 37 38 38 42
impresion            : 5
impresion_vacia      : 6
programa             : 0
repiteValores        : 13 19
sentencia            : 2 3
sentencias           : 1 3
valor                : 19 20

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . sentencias
    (2) sentencias -> . sentencia
    (3) sentencias -> . sentencias sentencia
    (4) sentencia -> . asignacion
    (5) sentencia -> . impresion
    (6) sentencia -> . impresion_vacia
    (7) sentencia -> . expresion
    (8) sentencia -> . condicion
    (9) asignacion -> . VARIABLE ASIGN VARIABLE
    (10) asignacion -> . VARIABLE ASIGN expresion
    (11) asignacion -> . VARIABLE ASIGN condicion
    (13) impresion -> . PRINT RPAREN repiteValores LPAREN
    (12) impresion_vacia -> . PRINT RPAREN LPAREN
    (21) expresion -> . expresion PLUS expresion
    (22) expresion -> . expresion MINUS expresion
    (23) expresion -> . expresion TIMES expresion
    (24) expresion -> . expresion DIVIDE expresion
    (25) expresion -> . expresion MOD expresion
    (26) expresion -> . LPAREN expresion RPAREN
    (27) expresion -> . NUMBER
    (28) expresion -> . FLOAT
    (29) expresion -> . TRUE
    (30) expresion -> . FALSE
    (31) expresion -> . condicion
    (32) expresion -> . VARIABLE
    (33) condicion -> . expresion GREATER expresion
    (34) condicion -> . expresion LESS expresion
    (35) condicion -> . expresion GREATER_EQUALS expresion
    (36) condicion -> . expresion LESS_EQUALS expresion
    (37) condicion -> . expresion EQUALS expresion
    (38) condicion -> . expresion NOT_EQUALS expresion
    (39) condicion -> . condicion AND condicion
    (40) condicion -> . condicion OR condicion
    (41) condicion -> . NOT condicion
    (42) condicion -> . NOT expresion
    (43) condicion -> . LPAREN condicion RPAREN

    VARIABLE        shift and go to state 9
    PRINT           shift and go to state 10
    LPAREN          shift and go to state 11
    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    NOT             shift and go to state 16

    programa                       shift and go to state 1
    sentencias                     shift and go to state 2
    sentencia                      shift and go to state 3
    asignacion                     shift and go to state 4
    impresion                      shift and go to state 5
    impresion_vacia                shift and go to state 6
    expresion                      shift and go to state 7
    condicion                      shift and go to state 8

state 1

    (0) S' -> programa .



state 2

    (1) programa -> sentencias .
    (3) sentencias -> sentencias . sentencia
    (4) sentencia -> . asignacion
    (5) sentencia -> . impresion
    (6) sentencia -> . impresion_vacia
    (7) sentencia -> . expresion
    (8) sentencia -> . condicion
    (9) asignacion -> . VARIABLE ASIGN VARIABLE
    (10) asignacion -> . VARIABLE ASIGN expresion
    (11) asignacion -> . VARIABLE ASIGN condicion
    (13) impresion -> . PRINT RPAREN repiteValores LPAREN
    (12) impresion_vacia -> . PRINT RPAREN LPAREN
    (21) expresion -> . expresion PLUS expresion
    (22) expresion -> . expresion MINUS expresion
    (23) expresion -> . expresion TIMES expresion
    (24) expresion -> . expresion DIVIDE expresion
    (25) expresion -> . expresion MOD expresion
    (26) expresion -> . LPAREN expresion RPAREN
    (27) expresion -> . NUMBER
    (28) expresion -> . FLOAT
    (29) expresion -> . TRUE
    (30) expresion -> . FALSE
    (31) expresion -> . condicion
    (32) expresion -> . VARIABLE
    (33) condicion -> . expresion GREATER expresion
    (34) condicion -> . expresion LESS expresion
    (35) condicion -> . expresion GREATER_EQUALS expresion
    (36) condicion -> . expresion LESS_EQUALS expresion
    (37) condicion -> . expresion EQUALS expresion
    (38) condicion -> . expresion NOT_EQUALS expresion
    (39) condicion -> . condicion AND condicion
    (40) condicion -> . condicion OR condicion
    (41) condicion -> . NOT condicion
    (42) condicion -> . NOT expresion
    (43) condicion -> . LPAREN condicion RPAREN

    $end            reduce using rule 1 (programa -> sentencias .)
    VARIABLE        shift and go to state 9
    PRINT           shift and go to state 10
    LPAREN          shift and go to state 11
    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    NOT             shift and go to state 16

    sentencia                      shift and go to state 17
    asignacion                     shift and go to state 4
    impresion                      shift and go to state 5
    impresion_vacia                shift and go to state 6
    expresion                      shift and go to state 7
    condicion                      shift and go to state 8

state 3

    (2) sentencias -> sentencia .

    VARIABLE        reduce using rule 2 (sentencias -> sentencia .)
    PRINT           reduce using rule 2 (sentencias -> sentencia .)
    LPAREN          reduce using rule 2 (sentencias -> sentencia .)
    NUMBER          reduce using rule 2 (sentencias -> sentencia .)
    FLOAT           reduce using rule 2 (sentencias -> sentencia .)
    TRUE            reduce using rule 2 (sentencias -> sentencia .)
    FALSE           reduce using rule 2 (sentencias -> sentencia .)
    NOT             reduce using rule 2 (sentencias -> sentencia .)
    $end            reduce using rule 2 (sentencias -> sentencia .)


state 4

    (4) sentencia -> asignacion .

    VARIABLE        reduce using rule 4 (sentencia -> asignacion .)
    PRINT           reduce using rule 4 (sentencia -> asignacion .)
    LPAREN          reduce using rule 4 (sentencia -> asignacion .)
    NUMBER          reduce using rule 4 (sentencia -> asignacion .)
    FLOAT           reduce using rule 4 (sentencia -> asignacion .)
    TRUE            reduce using rule 4 (sentencia -> asignacion .)
    FALSE           reduce using rule 4 (sentencia -> asignacion .)
    NOT             reduce using rule 4 (sentencia -> asignacion .)
    $end            reduce using rule 4 (sentencia -> asignacion .)


state 5

    (5) sentencia -> impresion .

    VARIABLE        reduce using rule 5 (sentencia -> impresion .)
    PRINT           reduce using rule 5 (sentencia -> impresion .)
    LPAREN          reduce using rule 5 (sentencia -> impresion .)
    NUMBER          reduce using rule 5 (sentencia -> impresion .)
    FLOAT           reduce using rule 5 (sentencia -> impresion .)
    TRUE            reduce using rule 5 (sentencia -> impresion .)
    FALSE           reduce using rule 5 (sentencia -> impresion .)
    NOT             reduce using rule 5 (sentencia -> impresion .)
    $end            reduce using rule 5 (sentencia -> impresion .)


state 6

    (6) sentencia -> impresion_vacia .

    VARIABLE        reduce using rule 6 (sentencia -> impresion_vacia .)
    PRINT           reduce using rule 6 (sentencia -> impresion_vacia .)
    LPAREN          reduce using rule 6 (sentencia -> impresion_vacia .)
    NUMBER          reduce using rule 6 (sentencia -> impresion_vacia .)
    FLOAT           reduce using rule 6 (sentencia -> impresion_vacia .)
    TRUE            reduce using rule 6 (sentencia -> impresion_vacia .)
    FALSE           reduce using rule 6 (sentencia -> impresion_vacia .)
    NOT             reduce using rule 6 (sentencia -> impresion_vacia .)
    $end            reduce using rule 6 (sentencia -> impresion_vacia .)


state 7

    (7) sentencia -> expresion .
    (21) expresion -> expresion . PLUS expresion
    (22) expresion -> expresion . MINUS expresion
    (23) expresion -> expresion . TIMES expresion
    (24) expresion -> expresion . DIVIDE expresion
    (25) expresion -> expresion . MOD expresion
    (33) condicion -> expresion . GREATER expresion
    (34) condicion -> expresion . LESS expresion
    (35) condicion -> expresion . GREATER_EQUALS expresion
    (36) condicion -> expresion . LESS_EQUALS expresion
    (37) condicion -> expresion . EQUALS expresion
    (38) condicion -> expresion . NOT_EQUALS expresion

    VARIABLE        reduce using rule 7 (sentencia -> expresion .)
    PRINT           reduce using rule 7 (sentencia -> expresion .)
    LPAREN          reduce using rule 7 (sentencia -> expresion .)
    NUMBER          reduce using rule 7 (sentencia -> expresion .)
    FLOAT           reduce using rule 7 (sentencia -> expresion .)
    TRUE            reduce using rule 7 (sentencia -> expresion .)
    FALSE           reduce using rule 7 (sentencia -> expresion .)
    NOT             reduce using rule 7 (sentencia -> expresion .)
    $end            reduce using rule 7 (sentencia -> expresion .)
    PLUS            shift and go to state 18
    MINUS           shift and go to state 19
    TIMES           shift and go to state 20
    DIVIDE          shift and go to state 21
    MOD             shift and go to state 22
    GREATER         shift and go to state 23
    LESS            shift and go to state 24
    GREATER_EQUALS  shift and go to state 25
    LESS_EQUALS     shift and go to state 26
    EQUALS          shift and go to state 27
    NOT_EQUALS      shift and go to state 28


state 8

    (8) sentencia -> condicion .
    (31) expresion -> condicion .
    (39) condicion -> condicion . AND condicion
    (40) condicion -> condicion . OR condicion

  ! reduce/reduce conflict for VARIABLE resolved using rule 8 (sentencia -> condicion .)
  ! reduce/reduce conflict for PRINT resolved using rule 8 (sentencia -> condicion .)
  ! reduce/reduce conflict for LPAREN resolved using rule 8 (sentencia -> condicion .)
  ! reduce/reduce conflict for NUMBER resolved using rule 8 (sentencia -> condicion .)
  ! reduce/reduce conflict for FLOAT resolved using rule 8 (sentencia -> condicion .)
  ! reduce/reduce conflict for TRUE resolved using rule 8 (sentencia -> condicion .)
  ! reduce/reduce conflict for FALSE resolved using rule 8 (sentencia -> condicion .)
  ! reduce/reduce conflict for NOT resolved using rule 8 (sentencia -> condicion .)
  ! reduce/reduce conflict for $end resolved using rule 8 (sentencia -> condicion .)
    VARIABLE        reduce using rule 8 (sentencia -> condicion .)
    PRINT           reduce using rule 8 (sentencia -> condicion .)
    LPAREN          reduce using rule 8 (sentencia -> condicion .)
    NUMBER          reduce using rule 8 (sentencia -> condicion .)
    FLOAT           reduce using rule 8 (sentencia -> condicion .)
    TRUE            reduce using rule 8 (sentencia -> condicion .)
    FALSE           reduce using rule 8 (sentencia -> condicion .)
    NOT             reduce using rule 8 (sentencia -> condicion .)
    $end            reduce using rule 8 (sentencia -> condicion .)
    PLUS            reduce using rule 31 (expresion -> condicion .)
    MINUS           reduce using rule 31 (expresion -> condicion .)
    TIMES           reduce using rule 31 (expresion -> condicion .)
    DIVIDE          reduce using rule 31 (expresion -> condicion .)
    MOD             reduce using rule 31 (expresion -> condicion .)
    GREATER         reduce using rule 31 (expresion -> condicion .)
    LESS            reduce using rule 31 (expresion -> condicion .)
    GREATER_EQUALS  reduce using rule 31 (expresion -> condicion .)
    LESS_EQUALS     reduce using rule 31 (expresion -> condicion .)
    EQUALS          reduce using rule 31 (expresion -> condicion .)
    NOT_EQUALS      reduce using rule 31 (expresion -> condicion .)
    AND             shift and go to state 29
    OR              shift and go to state 30

  ! VARIABLE        [ reduce using rule 31 (expresion -> condicion .) ]
  ! PRINT           [ reduce using rule 31 (expresion -> condicion .) ]
  ! LPAREN          [ reduce using rule 31 (expresion -> condicion .) ]
  ! NUMBER          [ reduce using rule 31 (expresion -> condicion .) ]
  ! FLOAT           [ reduce using rule 31 (expresion -> condicion .) ]
  ! TRUE            [ reduce using rule 31 (expresion -> condicion .) ]
  ! FALSE           [ reduce using rule 31 (expresion -> condicion .) ]
  ! NOT             [ reduce using rule 31 (expresion -> condicion .) ]
  ! $end            [ reduce using rule 31 (expresion -> condicion .) ]


state 9

    (9) asignacion -> VARIABLE . ASIGN VARIABLE
    (10) asignacion -> VARIABLE . ASIGN expresion
    (11) asignacion -> VARIABLE . ASIGN condicion
    (32) expresion -> VARIABLE .

    ASIGN           shift and go to state 31
    PLUS            reduce using rule 32 (expresion -> VARIABLE .)
    MINUS           reduce using rule 32 (expresion -> VARIABLE .)
    TIMES           reduce using rule 32 (expresion -> VARIABLE .)
    DIVIDE          reduce using rule 32 (expresion -> VARIABLE .)
    MOD             reduce using rule 32 (expresion -> VARIABLE .)
    GREATER         reduce using rule 32 (expresion -> VARIABLE .)
    LESS            reduce using rule 32 (expresion -> VARIABLE .)
    GREATER_EQUALS  reduce using rule 32 (expresion -> VARIABLE .)
    LESS_EQUALS     reduce using rule 32 (expresion -> VARIABLE .)
    EQUALS          reduce using rule 32 (expresion -> VARIABLE .)
    NOT_EQUALS      reduce using rule 32 (expresion -> VARIABLE .)
    VARIABLE        reduce using rule 32 (expresion -> VARIABLE .)
    PRINT           reduce using rule 32 (expresion -> VARIABLE .)
    LPAREN          reduce using rule 32 (expresion -> VARIABLE .)
    NUMBER          reduce using rule 32 (expresion -> VARIABLE .)
    FLOAT           reduce using rule 32 (expresion -> VARIABLE .)
    TRUE            reduce using rule 32 (expresion -> VARIABLE .)
    FALSE           reduce using rule 32 (expresion -> VARIABLE .)
    NOT             reduce using rule 32 (expresion -> VARIABLE .)
    $end            reduce using rule 32 (expresion -> VARIABLE .)


state 10

    (13) impresion -> PRINT . RPAREN repiteValores LPAREN
    (12) impresion_vacia -> PRINT . RPAREN LPAREN

    RPAREN          shift and go to state 32


state 11

    (26) expresion -> LPAREN . expresion RPAREN
    (43) condicion -> LPAREN . condicion RPAREN
    (21) expresion -> . expresion PLUS expresion
    (22) expresion -> . expresion MINUS expresion
    (23) expresion -> . expresion TIMES expresion
    (24) expresion -> . expresion DIVIDE expresion
    (25) expresion -> . expresion MOD expresion
    (26) expresion -> . LPAREN expresion RPAREN
    (27) expresion -> . NUMBER
    (28) expresion -> . FLOAT
    (29) expresion -> . TRUE
    (30) expresion -> . FALSE
    (31) expresion -> . condicion
    (32) expresion -> . VARIABLE
    (33) condicion -> . expresion GREATER expresion
    (34) condicion -> . expresion LESS expresion
    (35) condicion -> . expresion GREATER_EQUALS expresion
    (36) condicion -> . expresion LESS_EQUALS expresion
    (37) condicion -> . expresion EQUALS expresion
    (38) condicion -> . expresion NOT_EQUALS expresion
    (39) condicion -> . condicion AND condicion
    (40) condicion -> . condicion OR condicion
    (41) condicion -> . NOT condicion
    (42) condicion -> . NOT expresion
    (43) condicion -> . LPAREN condicion RPAREN

    LPAREN          shift and go to state 11
    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    VARIABLE        shift and go to state 35
    NOT             shift and go to state 16

    expresion                      shift and go to state 33
    condicion                      shift and go to state 34

state 12

    (27) expresion -> NUMBER .

    PLUS            reduce using rule 27 (expresion -> NUMBER .)
    MINUS           reduce using rule 27 (expresion -> NUMBER .)
    TIMES           reduce using rule 27 (expresion -> NUMBER .)
    DIVIDE          reduce using rule 27 (expresion -> NUMBER .)
    MOD             reduce using rule 27 (expresion -> NUMBER .)
    GREATER         reduce using rule 27 (expresion -> NUMBER .)
    LESS            reduce using rule 27 (expresion -> NUMBER .)
    GREATER_EQUALS  reduce using rule 27 (expresion -> NUMBER .)
    LESS_EQUALS     reduce using rule 27 (expresion -> NUMBER .)
    EQUALS          reduce using rule 27 (expresion -> NUMBER .)
    NOT_EQUALS      reduce using rule 27 (expresion -> NUMBER .)
    VARIABLE        reduce using rule 27 (expresion -> NUMBER .)
    PRINT           reduce using rule 27 (expresion -> NUMBER .)
    LPAREN          reduce using rule 27 (expresion -> NUMBER .)
    NUMBER          reduce using rule 27 (expresion -> NUMBER .)
    FLOAT           reduce using rule 27 (expresion -> NUMBER .)
    TRUE            reduce using rule 27 (expresion -> NUMBER .)
    FALSE           reduce using rule 27 (expresion -> NUMBER .)
    NOT             reduce using rule 27 (expresion -> NUMBER .)
    $end            reduce using rule 27 (expresion -> NUMBER .)
    RPAREN          reduce using rule 27 (expresion -> NUMBER .)
    AND             reduce using rule 27 (expresion -> NUMBER .)
    OR              reduce using rule 27 (expresion -> NUMBER .)


state 13

    (28) expresion -> FLOAT .

    PLUS            reduce using rule 28 (expresion -> FLOAT .)
    MINUS           reduce using rule 28 (expresion -> FLOAT .)
    TIMES           reduce using rule 28 (expresion -> FLOAT .)
    DIVIDE          reduce using rule 28 (expresion -> FLOAT .)
    MOD             reduce using rule 28 (expresion -> FLOAT .)
    GREATER         reduce using rule 28 (expresion -> FLOAT .)
    LESS            reduce using rule 28 (expresion -> FLOAT .)
    GREATER_EQUALS  reduce using rule 28 (expresion -> FLOAT .)
    LESS_EQUALS     reduce using rule 28 (expresion -> FLOAT .)
    EQUALS          reduce using rule 28 (expresion -> FLOAT .)
    NOT_EQUALS      reduce using rule 28 (expresion -> FLOAT .)
    VARIABLE        reduce using rule 28 (expresion -> FLOAT .)
    PRINT           reduce using rule 28 (expresion -> FLOAT .)
    LPAREN          reduce using rule 28 (expresion -> FLOAT .)
    NUMBER          reduce using rule 28 (expresion -> FLOAT .)
    FLOAT           reduce using rule 28 (expresion -> FLOAT .)
    TRUE            reduce using rule 28 (expresion -> FLOAT .)
    FALSE           reduce using rule 28 (expresion -> FLOAT .)
    NOT             reduce using rule 28 (expresion -> FLOAT .)
    $end            reduce using rule 28 (expresion -> FLOAT .)
    RPAREN          reduce using rule 28 (expresion -> FLOAT .)
    AND             reduce using rule 28 (expresion -> FLOAT .)
    OR              reduce using rule 28 (expresion -> FLOAT .)


state 14

    (29) expresion -> TRUE .

    PLUS            reduce using rule 29 (expresion -> TRUE .)
    MINUS           reduce using rule 29 (expresion -> TRUE .)
    TIMES           reduce using rule 29 (expresion -> TRUE .)
    DIVIDE          reduce using rule 29 (expresion -> TRUE .)
    MOD             reduce using rule 29 (expresion -> TRUE .)
    GREATER         reduce using rule 29 (expresion -> TRUE .)
    LESS            reduce using rule 29 (expresion -> TRUE .)
    GREATER_EQUALS  reduce using rule 29 (expresion -> TRUE .)
    LESS_EQUALS     reduce using rule 29 (expresion -> TRUE .)
    EQUALS          reduce using rule 29 (expresion -> TRUE .)
    NOT_EQUALS      reduce using rule 29 (expresion -> TRUE .)
    VARIABLE        reduce using rule 29 (expresion -> TRUE .)
    PRINT           reduce using rule 29 (expresion -> TRUE .)
    LPAREN          reduce using rule 29 (expresion -> TRUE .)
    NUMBER          reduce using rule 29 (expresion -> TRUE .)
    FLOAT           reduce using rule 29 (expresion -> TRUE .)
    TRUE            reduce using rule 29 (expresion -> TRUE .)
    FALSE           reduce using rule 29 (expresion -> TRUE .)
    NOT             reduce using rule 29 (expresion -> TRUE .)
    $end            reduce using rule 29 (expresion -> TRUE .)
    RPAREN          reduce using rule 29 (expresion -> TRUE .)
    AND             reduce using rule 29 (expresion -> TRUE .)
    OR              reduce using rule 29 (expresion -> TRUE .)


state 15

    (30) expresion -> FALSE .

    PLUS            reduce using rule 30 (expresion -> FALSE .)
    MINUS           reduce using rule 30 (expresion -> FALSE .)
    TIMES           reduce using rule 30 (expresion -> FALSE .)
    DIVIDE          reduce using rule 30 (expresion -> FALSE .)
    MOD             reduce using rule 30 (expresion -> FALSE .)
    GREATER         reduce using rule 30 (expresion -> FALSE .)
    LESS            reduce using rule 30 (expresion -> FALSE .)
    GREATER_EQUALS  reduce using rule 30 (expresion -> FALSE .)
    LESS_EQUALS     reduce using rule 30 (expresion -> FALSE .)
    EQUALS          reduce using rule 30 (expresion -> FALSE .)
    NOT_EQUALS      reduce using rule 30 (expresion -> FALSE .)
    VARIABLE        reduce using rule 30 (expresion -> FALSE .)
    PRINT           reduce using rule 30 (expresion -> FALSE .)
    LPAREN          reduce using rule 30 (expresion -> FALSE .)
    NUMBER          reduce using rule 30 (expresion -> FALSE .)
    FLOAT           reduce using rule 30 (expresion -> FALSE .)
    TRUE            reduce using rule 30 (expresion -> FALSE .)
    FALSE           reduce using rule 30 (expresion -> FALSE .)
    NOT             reduce using rule 30 (expresion -> FALSE .)
    $end            reduce using rule 30 (expresion -> FALSE .)
    RPAREN          reduce using rule 30 (expresion -> FALSE .)
    AND             reduce using rule 30 (expresion -> FALSE .)
    OR              reduce using rule 30 (expresion -> FALSE .)


state 16

    (41) condicion -> NOT . condicion
    (42) condicion -> NOT . expresion
    (33) condicion -> . expresion GREATER expresion
    (34) condicion -> . expresion LESS expresion
    (35) condicion -> . expresion GREATER_EQUALS expresion
    (36) condicion -> . expresion LESS_EQUALS expresion
    (37) condicion -> . expresion EQUALS expresion
    (38) condicion -> . expresion NOT_EQUALS expresion
    (39) condicion -> . condicion AND condicion
    (40) condicion -> . condicion OR condicion
    (41) condicion -> . NOT condicion
    (42) condicion -> . NOT expresion
    (43) condicion -> . LPAREN condicion RPAREN
    (21) expresion -> . expresion PLUS expresion
    (22) expresion -> . expresion MINUS expresion
    (23) expresion -> . expresion TIMES expresion
    (24) expresion -> . expresion DIVIDE expresion
    (25) expresion -> . expresion MOD expresion
    (26) expresion -> . LPAREN expresion RPAREN
    (27) expresion -> . NUMBER
    (28) expresion -> . FLOAT
    (29) expresion -> . TRUE
    (30) expresion -> . FALSE
    (31) expresion -> . condicion
    (32) expresion -> . VARIABLE

    NOT             shift and go to state 16
    LPAREN          shift and go to state 38
    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    VARIABLE        shift and go to state 35

    condicion                      shift and go to state 36
    expresion                      shift and go to state 37

state 17

    (3) sentencias -> sentencias sentencia .

    VARIABLE        reduce using rule 3 (sentencias -> sentencias sentencia .)
    PRINT           reduce using rule 3 (sentencias -> sentencias sentencia .)
    LPAREN          reduce using rule 3 (sentencias -> sentencias sentencia .)
    NUMBER          reduce using rule 3 (sentencias -> sentencias sentencia .)
    FLOAT           reduce using rule 3 (sentencias -> sentencias sentencia .)
    TRUE            reduce using rule 3 (sentencias -> sentencias sentencia .)
    FALSE           reduce using rule 3 (sentencias -> sentencias sentencia .)
    NOT             reduce using rule 3 (sentencias -> sentencias sentencia .)
    $end            reduce using rule 3 (sentencias -> sentencias sentencia .)


state 18

    (21) expresion -> expresion PLUS . expresion
    (21) expresion -> . expresion PLUS expresion
    (22) expresion -> . expresion MINUS expresion
    (23) expresion -> . expresion TIMES expresion
    (24) expresion -> . expresion DIVIDE expresion
    (25) expresion -> . expresion MOD expresion
    (26) expresion -> . LPAREN expresion RPAREN
    (27) expresion -> . NUMBER
    (28) expresion -> . FLOAT
    (29) expresion -> . TRUE
    (30) expresion -> . FALSE
    (31) expresion -> . condicion
    (32) expresion -> . VARIABLE
    (33) condicion -> . expresion GREATER expresion
    (34) condicion -> . expresion LESS expresion
    (35) condicion -> . expresion GREATER_EQUALS expresion
    (36) condicion -> . expresion LESS_EQUALS expresion
    (37) condicion -> . expresion EQUALS expresion
    (38) condicion -> . expresion NOT_EQUALS expresion
    (39) condicion -> . condicion AND condicion
    (40) condicion -> . condicion OR condicion
    (41) condicion -> . NOT condicion
    (42) condicion -> . NOT expresion
    (43) condicion -> . LPAREN condicion RPAREN

    LPAREN          shift and go to state 11
    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    VARIABLE        shift and go to state 35
    NOT             shift and go to state 16

    expresion                      shift and go to state 39
    condicion                      shift and go to state 40

state 19

    (22) expresion -> expresion MINUS . expresion
    (21) expresion -> . expresion PLUS expresion
    (22) expresion -> . expresion MINUS expresion
    (23) expresion -> . expresion TIMES expresion
    (24) expresion -> . expresion DIVIDE expresion
    (25) expresion -> . expresion MOD expresion
    (26) expresion -> . LPAREN expresion RPAREN
    (27) expresion -> . NUMBER
    (28) expresion -> . FLOAT
    (29) expresion -> . TRUE
    (30) expresion -> . FALSE
    (31) expresion -> . condicion
    (32) expresion -> . VARIABLE
    (33) condicion -> . expresion GREATER expresion
    (34) condicion -> . expresion LESS expresion
    (35) condicion -> . expresion GREATER_EQUALS expresion
    (36) condicion -> . expresion LESS_EQUALS expresion
    (37) condicion -> . expresion EQUALS expresion
    (38) condicion -> . expresion NOT_EQUALS expresion
    (39) condicion -> . condicion AND condicion
    (40) condicion -> . condicion OR condicion
    (41) condicion -> . NOT condicion
    (42) condicion -> . NOT expresion
    (43) condicion -> . LPAREN condicion RPAREN

    LPAREN          shift and go to state 11
    NUMBER          shift and go to state 12
    FLOAT           shift and go to state 13
    TRUE            shift and go to state 14
    FALSE           shift and go to state 15
    VARIABLE        shift and go to state 35
    NOT             shift and go to state 16

    expresion                      shift and go to state 41
    condicion                      shift and go to state 40

state 20
